remove deprecated invocations